Add logging when default / policy web app installs fail due to redirect.

This should make debugging failing default and policy installs simpler.

Bug: 906911
Change-Id: Ia8e893925d6d4d6b75acb1c1e23aef816f198d8a
Reviewed-on: https://chromium-review.googlesource.com/c/1343579
Commit-Queue: Ben Wells <benwells@chromium.org>
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609631}
Former-commit-id: 91a4c9a76df71bab769fb8f2c077bca354cfb106