chrome/browser/web_applications/extensions/pending_bookmark_app_manager.cc
@@ -102,6 +102,8 @@ void PendingBookmarkAppManager::UninstallApps(
     base::Optional<bool> opt =
         IsExtensionPresentAndInstalled(extension_id.value());
     if (!opt.has_value() || !opt.value()) {
+      LOG(WARNING) << "Couldn't uninstall app with url " << app_to_uninstall
+                   << "; App doesn't exist";
       callback.Run(app_to_uninstall, false);
       continue;
     }
@@ -231,6 +233,9 @@ void PendingBookmarkAppManager::OnInstalled(
 
 void PendingBookmarkAppManager::OnWebContentsLoadTimedOut() {
   web_contents_->Stop();
+  LOG(ERROR) << "Error installing "
+             << current_task_and_callback_->task->app_info().url.spec();
+  LOG(ERROR) << "  page took too long to load.";
   Observe(nullptr);
   CurrentInstallationFinished(base::nullopt);
 }
@@ -268,6 +273,9 @@ void PendingBookmarkAppManager::DidFinishLoad(
   }
 
   if (validated_url != current_task_and_callback_->task->app_info().url) {
+    LOG(ERROR) << "Error installing "
+               << current_task_and_callback_->task->app_info().url.spec();
+    LOG(ERROR) << "  page redirected to " << validated_url.spec();
     CurrentInstallationFinished(base::nullopt);
     return;
   }
@@ -292,6 +300,9 @@ void PendingBookmarkAppManager::DidFailLoad(
     return;
   }
 
+  LOG(ERROR) << "Error installing "
+             << current_task_and_callback_->task->app_info().url.spec();
+  LOG(ERROR) << "  page failed to load.";
   Observe(nullptr);
   CurrentInstallationFinished(base::nullopt);
 }
